testsuite/tests/rep-poly/T24769a.stderr
T24769a.hs:5:1: error: [GHC-55287]
    The binder ‘f’ does not have a fixed runtime representation.
    Its type is:
      forall {t :: TYPE (r0 s0)}. t :: TYPE (r0 s0)

T24769a.hs:5:10: error: [GHC-94185]
    • Can't quantify over ‘s’
        bound by the partial type signature:
          <expression> :: (_ :: TYPE (r s))
    • In the expression: f :: (_ :: TYPE (r s))
      In an equation for ‘f’: f = f :: (_ :: TYPE (r s))

T24769a.hs:5:10: error: [GHC-94185]
    • Can't quantify over ‘r’
        bound by the partial type signature:
          <expression> :: (_ :: TYPE (r s))
    • In the expression: f :: (_ :: TYPE (r s))
      In an equation for ‘f’: f = f :: (_ :: TYPE (r s))

T24769a.hs:5:11: error: [GHC-88464]
    • Found type wildcard ‘_’ standing for ‘t :: TYPE (r0 s0)’
      Where: ‘r0’ is an ambiguous type variable
             ‘k0’ is an ambiguous type variable
             ‘s0’ is an ambiguous type variable
             ‘t’ is a rigid type variable bound by
               the inferred type of f :: t
               at T24769a.hs:5:1-26
      To use the inferred type, enable PartialTypeSignatures
    • In an expression type signature: (_ :: TYPE (r s))
      In the expression: f :: (_ :: TYPE (r s))
      In an equation for ‘f’: f = f :: (_ :: TYPE (r s))
    • Relevant bindings include f :: t (bound at T24769a.hs:5:1)

