testsuite/tests/rep-poly/T24769a.hs
module T24769a where

import GHC.Exts

f = f :: (_ :: TYPE (r s))
